# etl_python_duckdb

./: .env  README.md  app.py  duck.db  duckdb.db  exemplo.env  pipeline_00.py  pipeline_01.py  pyproject.toml
